2017-12-04      Axel Kummer <kummeraxel@gmail.com>

    * Version: 0.0.3

2017-12-04      Axel Kummer <kummeraxel@gmail.com>

    * Additional path fix to meet the api specs
    * prepare make the api root path configurable

2017-12-03      Axel Kummer <kummeraxel@gmail.com>

    * Version: 0.0.2

2017-12-03      Axel Kummer <kummeraxel@gmail.com>

    * Fix endpoint path

2017-12-02      Axel Kummer <kummeraxel@gmail.com>

    * Version: 0.0.1

2017-11-25      Axel Kummer <kummeraxel@gmail.com>

    * Version: 0.0.1-BETA