@@ -1,3 +1,7 @@
+2017-12-28      Alexander Gunkel <alexandergunkel@gmail.com>
+
+    * Interpolate context values into log messages
+
 2017-12-04      Axel Kummer <kummeraxel@gmail.com>
 
     * Version: 0.0.3
